syntax = "proto3";

package code_executor;

option go_package = "github.com/lindstorm76/codejudge/api/pb";

// SubmissionService handles code submission for execution.
service SubmissionService {
	// Creates a new submission.
	rpc Submit(SubmitRequest) returns (SubmitResponse);

	// Gets the status of a submission.
	rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
}


//
message SubmitRequest {
	string code = 1;
	string language = 2;
}

//
message SubmitResponse {
	string submission_id = 1;
}

//
message GetStatusRequest {
	string submission_id = 1;
}

//
message GetStatusResponse {
	string status = 1;
}

// protoc --go_out=api/pb --go-grpc_out=api/pb --go_opt=paths=source_relative --go-grpc_opt=paths=source_relative api/proto/submission.proto